--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,12 @@
 			<version>1.4.196</version>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>com.airhacks</groupId>
+			<artifactId>afterburner.fx</artifactId>
+			<version>1.6.0</version>
+			<scope>compile</scope>
+		</dependency>
 
 	</dependencies>
 
@@ -43,6 +48,27 @@
 
 	<build>
 		<finalName>GCodeFx</finalName>
+
+		<resources>
+			<resource>
+				<directory>src/main/java</directory>
+				<includes>
+					<include>**/*.fxml</include>
+					<include>**/*.css</include>
+					<include>**/*.properties</include>
+				</includes>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<includes>
+					<include>**/*.xml</include>
+					<include>**/*.css</include>
+					<include>**/*.png</include>
+					<include>**/*.properties</include>
+				</includes>
+			</resource>
+		</resources>
+
 
 		<plugins>
 
